# ampav-aws

./: .gitignore  LICENSE  README.md  pyproject.toml
ampav/aws/: __init__.py  _job.py  _version.py  artifacts.py  comprehend.py  comprehend_named_entities.py  comprehend_named_entities_realtime.py  config.py  errors.py  job.py  s3.py  session.py  transcribe.py  transcribe_contract.py  transcribe_conversion.py
ampav/aws_transcribe/: __init__.py  transcribe.py
ampav_aws_cli/: __init__.py  comprehend_named_entities.py  comprehend_named_entities_realtime.py  transcribe.py
ampav_aws_pipeline/: __init__.py  comprehend.py  s3_files.py  transcribe.py
ampav_aws_utils/: __init__.py  s3_files.py
examples/: aws_comprehend_named_entities_realtime_text_example.py  aws_comprehend_named_entities_realtime_transcript_example.py  aws_comprehend_named_entities_s3_example.py  aws_comprehend_named_entities_transcript_example.py  aws_config.example.yaml  aws_transcribe_config.example.yaml  aws_transcribe_file_example.py  aws_transcribe_from_s3.py  aws_transcribe_local_file.py  aws_transcribe_s3_example.py  aws_transcribe_save_artifacts.py  aws_transcribe_with_yaml_config.py  example_support.py
examples/config/: aws_config.example.yaml
examples/data/: AMP-Intro.m4a
tests/: test_comprehend_api.py  test_comprehend_live.py  test_comprehend_named_entities_api.py  test_comprehend_named_entities_cli.py  test_comprehend_named_entities_live.py  test_comprehend_named_entities_realtime.py  test_comprehend_named_entities_realtime_cli.py  test_pipeline_adapters.py  test_s3.py  test_transcribe_api.py  test_transcribe_config.py  test_transcribe_contract.py  test_transcribe_conversion.py  test_transcribe_errors.py  test_transcribe_live.py
tests/fixtures/: aws_transcript_opendoor.json
