[project]
name = "ampav-aws"
version = "0.0.2"
description = "AWS tooling for the AMPAV environment"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
]
authors = [
    {name = "Ying Feng", email = "yingfeng@iu.edu"},
]

requires-python = ">=3.12"
dependencies = [
    "ampav-core>=0.0.14",
]

[project.urls]
Homepage = "https://github.com/AMPAV/ampav-aws"
Repository = "https://github.com/AMPAV/ampav-aws.git"
Issues = "https://github.com/AMPAV/ampav-aws/issues"

[project.scripts]
ampav_aws_transcribe = "ampav.aws.transcribe:cli_aws_transcribe"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
